--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.mustache
@@ -1,7 +1,7 @@
 {{&gt; organisms-header }}
 {{&gt; organisms-navigation }}
 
-&lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;
+&lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;&gt;
   &lt;div class=&quot;region-content&quot;&gt;
 
     &lt;div class=&quot;l-panels-landing preface-empty title sidebar main&quot;&gt;
@@ -17,58 +17,82 @@
         &lt;/aside&gt;
         &lt;div class=&quot;l-main&quot;&gt;
 
-          &lt;div class=&quot;view--card-view-3col&quot;&gt;
-            &lt;h2 style=&quot;margin-bottom: 0.25em;&quot;&gt;Event Teaser&lt;/h2&gt;
-            {{# listItems.three }}
-              &lt;div class=&quot;views-row&quot;&gt;
-                {{&gt; organisms-event-teaser }}
+          &lt;div class=&quot;pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Event Teaser&lt;/h2&gt; 
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view--card-view-3col&quot;&gt;
+                {{# listItems.three }}
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    {{&gt; organisms-event-teaser }}
+                  &lt;/div&gt;
+                {{/ listItems.three }}
               &lt;/div&gt;
-            {{/ listItems.three }}
+            &lt;/div&gt;
           &lt;/div&gt;
 
-          &lt;div class=&quot;view--card-view-3col&quot;&gt;
-            &lt;h2 style=&quot;margin-bottom: 0.25em;&quot;&gt;Innovation Teaser&lt;/h2&gt;
-            {{# listItems.three }}
-              &lt;div class=&quot;views-row&quot;&gt;
-                {{&gt; organisms-innovation-teaser }}
+          &lt;div class=&quot;pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Innovation Teaser&lt;/h2&gt; 
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view--card-view-3col&quot;&gt;
+                {{# listItems.three }}
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    {{&gt; organisms-innovation-teaser }}
+                  &lt;/div&gt;
+                {{/ listItems.three }}
               &lt;/div&gt;
-            {{/ listItems.three }}
+            &lt;/div&gt;
           &lt;/div&gt;
 
-          &lt;div class=&quot;view--card-view-3col&quot;&gt;
-            &lt;h2 style=&quot;margin-bottom: 0.25em;&quot;&gt;Highlight Teaser&lt;/h2&gt;
-            {{# listItems.three }}
-              &lt;div class=&quot;views-row&quot;&gt;
-                {{&gt; organisms-highlight-teaser }}
+          &lt;div class=&quot;pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Highlight Teaser&lt;/h2&gt; 
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view--card-view-3col&quot;&gt;
+                {{# listItems.three }}
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    {{&gt; organisms-highlight-teaser }}
+                  &lt;/div&gt;
+                {{/ listItems.three }}
               &lt;/div&gt;
-            {{/ listItems.three }}
+            &lt;/div&gt;
           &lt;/div&gt;
 
-           &lt;div class=&quot;view--card-view-3col&quot;&gt;
-            &lt;h2 style=&quot;margin-bottom: 0.25em;&quot;&gt;Resource Teaser&lt;/h2&gt;
-            {{# listItems.three }}
-              &lt;div class=&quot;views-row&quot;&gt;
-                {{&gt; organisms-resource-teaser }}
+          &lt;div class=&quot;pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Resource Teaser&lt;/h2&gt; 
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view--card-view-3col&quot;&gt;
+                {{# listItems.three }}
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    {{&gt; organisms-resource-teaser }}
+                  &lt;/div&gt;
+                {{/ listItems.three }}
               &lt;/div&gt;
-            {{/ listItems.three }}
+            &lt;/div&gt;
           &lt;/div&gt;
 
-           &lt;div class=&quot;view--card-view-3col&quot;&gt;
-            &lt;h2 style=&quot;margin-bottom: 0.25em;&quot;&gt;Organization Teaser&lt;/h2&gt;
-            {{# listItems.three }}
-              &lt;div class=&quot;views-row&quot;&gt;
-                {{&gt; organisms-organization-teaser }}
+          &lt;div class=&quot;pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Organization Teaser&lt;/h2&gt; 
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view--card-view-3col&quot;&gt;
+                {{# listItems.three }}
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    {{&gt; organisms-organization-teaser }}
+                  &lt;/div&gt;
+                {{/ listItems.three }}
               &lt;/div&gt;
-            {{/ listItems.three }}
+            &lt;/div&gt;
           &lt;/div&gt;
 
-           &lt;div class=&quot;view--card-view-3col&quot;&gt;
-            &lt;h2 style=&quot;margin-bottom: 0.25em;&quot;&gt;Funding Op Teaser&lt;/h2&gt;
-            {{# listItems.three }}
-              &lt;div class=&quot;views-row&quot;&gt;
-                {{&gt; organisms-funding-op-teaser }}
+          &lt;div class=&quot;pane&quot;&gt;
+            &lt;h2 class=&quot;pane__title&quot;&gt;Funding Op Teaser&lt;/h2&gt; 
+            &lt;div class=&quot;pane__content&quot;&gt;
+              &lt;div class=&quot;view--card-view-3col&quot;&gt;
+                {{# listItems.three }}
+                  &lt;div class=&quot;views-row&quot;&gt;
+                    {{&gt; organisms-funding-op-teaser }}
+                  &lt;/div&gt;
+                {{/ listItems.three }}
               &lt;/div&gt;
-            {{/ listItems.three }}
+            &lt;/div&gt;
           &lt;/div&gt;
 
           {{&gt; molecules-pager }}
