--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
@@ -84,12 +84,7 @@ div[class*="pane--facetapi-"] {
 
 .pane--facetapi__main-title {
   border: 0 !important;
-  .pane__content {
-    h2 {
-      margin: 0 0 0.5em 0;
-      padding: 0;
-    }
-  }
+  margin: 0;
 }
 
  
