--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--homepage-join-callout.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--homepage-join-callout.scss
@@ -2,7 +2,7 @@
   .pane__content {
     text-align: center;
     h1 {
-      @extend %pane__title--homepage;
+      @extend %pane__title--large;
     }
   }
 }
