--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-innovation-teaser/02-organisms-02-view-modes-innovation-teaser.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-02-view-modes-innovation-teaser/02-organisms-02-view-modes-innovation-teaser.mustache
@@ -13,7 +13,7 @@
         &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;12&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
-        &lt;div class=&quot;has-icon--organization&quot; title=&quot;Organizations&quot;&gt;5&lt;/div&gt;
+        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;5&lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;view&quot;&gt;
         &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;6&lt;/div&gt;
