--- a/public/sites/all/themes/gesso/sass/partials/components/_card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_card.scss
@@ -186,6 +186,14 @@
         margin-left: -9px; // half of width
       }
     }
+    .has-icon--funding {
+      &:before {
+        @extend %cardicon;
+        @include image-replace(20px,20px);
+        @include svg-background(icon-funding-20-20-blue);
+        margin-left: -10px; // half of width
+      }
+    }
     .has-icon--member {
       &:before {
         @extend %cardicon;
