--- a/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/card-types@inprogress.mustache
+++ b/public/sites/all/themes/gesso/patternlab/source/_patterns/03-templates/card-types@inprogress.mustache
@@ -11,92 +11,94 @@
           {{> atoms-landing-page-intro-innovations }}
         </div>
       </div>
-      <div class="l-wrapper layout-constrain">
-        <aside class="l-sidebar">
-          {{> molecules-filters }}
-        </aside>
-        <div class="l-main">
+      <div class="l-wrapper region-landing-content">
+        <div class="layout-constrain">
+          <aside class="l-sidebar">
+            {{> molecules-filters }}
+          </aside>
+          <div class="l-main">
 
-          <div class="pane">
-            <h2 class="pane__title">Event Teaser</h2> 
-            <div class="pane__content">
-              <div class="view--card-view-3col">
-                {{# listItems.three }}
-                  <div class="views-row">
-                    {{> organisms-event-teaser }}
-                  </div>
-                {{/ listItems.three }}
+            <div class="pane">
+              <h2 class="pane__title">Event Teaser</h2> 
+              <div class="pane__content">
+                <div class="view--card-view-3col">
+                  {{# listItems.three }}
+                    <div class="views-row">
+                      {{> organisms-event-teaser }}
+                    </div>
+                  {{/ listItems.three }}
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="pane">
-            <h2 class="pane__title">Innovation Teaser</h2> 
-            <div class="pane__content">
-              <div class="view--card-view-3col">
-                {{# listItems.three }}
-                  <div class="views-row">
-                    {{> organisms-innovation-teaser }}
-                  </div>
-                {{/ listItems.three }}
+            <div class="pane">
+              <h2 class="pane__title">Innovation Teaser</h2> 
+              <div class="pane__content">
+                <div class="view--card-view-3col">
+                  {{# listItems.three }}
+                    <div class="views-row">
+                      {{> organisms-innovation-teaser }}
+                    </div>
+                  {{/ listItems.three }}
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="pane">
-            <h2 class="pane__title">Highlight Teaser</h2> 
-            <div class="pane__content">
-              <div class="view--card-view-3col">
-                {{# listItems.three }}
-                  <div class="views-row">
-                    {{> organisms-highlight-teaser }}
-                  </div>
-                {{/ listItems.three }}
+            <div class="pane">
+              <h2 class="pane__title">Highlight Teaser</h2> 
+              <div class="pane__content">
+                <div class="view--card-view-3col">
+                  {{# listItems.three }}
+                    <div class="views-row">
+                      {{> organisms-highlight-teaser }}
+                    </div>
+                  {{/ listItems.three }}
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="pane">
-            <h2 class="pane__title">Resource Teaser</h2> 
-            <div class="pane__content">
-              <div class="view--card-view-3col">
-                {{# listItems.three }}
-                  <div class="views-row">
-                    {{> organisms-resource-teaser }}
-                  </div>
-                {{/ listItems.three }}
+            <div class="pane">
+              <h2 class="pane__title">Resource Teaser</h2> 
+              <div class="pane__content">
+                <div class="view--card-view-3col">
+                  {{# listItems.three }}
+                    <div class="views-row">
+                      {{> organisms-resource-teaser }}
+                    </div>
+                  {{/ listItems.three }}
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="pane">
-            <h2 class="pane__title">Organization Teaser</h2> 
-            <div class="pane__content">
-              <div class="view--card-view-3col">
-                {{# listItems.three }}
-                  <div class="views-row">
-                    {{> organisms-organization-teaser }}
-                  </div>
-                {{/ listItems.three }}
+            <div class="pane">
+              <h2 class="pane__title">Organization Teaser</h2> 
+              <div class="pane__content">
+                <div class="view--card-view-3col">
+                  {{# listItems.three }}
+                    <div class="views-row">
+                      {{> organisms-organization-teaser }}
+                    </div>
+                  {{/ listItems.three }}
+                </div>
               </div>
             </div>
-          </div>
 
-          <div class="pane">
-            <h2 class="pane__title">Funding Op Teaser</h2> 
-            <div class="pane__content">
-              <div class="view--card-view-3col">
-                {{# listItems.three }}
-                  <div class="views-row">
-                    {{> organisms-funding-op-teaser }}
-                  </div>
-                {{/ listItems.three }}
+            <div class="pane">
+              <h2 class="pane__title">Funding Op Teaser</h2> 
+              <div class="pane__content">
+                <div class="view--card-view-3col">
+                  {{# listItems.three }}
+                    <div class="views-row">
+                      {{> organisms-funding-op-teaser }}
+                    </div>
+                  {{/ listItems.three }}
+                </div>
               </div>
             </div>
+
+            {{> molecules-pager }}
+
           </div>
-
-          {{> molecules-pager }}
-
         </div>
       </div>
     </div>
