--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.mustache
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-discussion-landing/03-templates-discussion-landing.mustache
@@ -1,7 +1,7 @@
 {{&gt; organisms-header }}
 {{&gt; organisms-navigation }}
 
-&lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;
+&lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;&gt;
   &lt;div class=&quot;region-content&quot;&gt;
 
     &lt;div class=&quot;l-panels-landing preface-empty title sidebar main&quot;&gt;
@@ -11,20 +11,22 @@
           {{&gt; atoms-landing-page-intro-discussions }}
         &lt;/div&gt;
       &lt;/div&gt;
-      &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
-        &lt;aside class=&quot;l-sidebar&quot;&gt;
-          {{&gt; molecules-filters }}
-        &lt;/aside&gt;
-        &lt;div class=&quot;l-main&quot;&gt;
-          &lt;div class=&quot;pane&quot;&gt;
-            &lt;div class=&quot;pane__content&quot;&gt;
-              &lt;div class=&quot;view view--discussion-listing&quot;&gt;
-                {{# listItems.nine }}
-                  &lt;div class=&quot;views-row&quot;&gt;
-                    {{&gt; organisms-discussion-teaser }}
-                  &lt;/div&gt;
-                {{/ listItems.nine }}
-                {{&gt; molecules-pager }}
+      &lt;div class=&quot;l-wrapper region-landing-content&quot;&gt;
+        &lt;div class=&quot;layout-constrain&quot;&gt;
+          &lt;aside class=&quot;l-sidebar&quot;&gt;
+            {{&gt; molecules-filters }}
+          &lt;/aside&gt;
+          &lt;div class=&quot;l-main&quot;&gt;
+            &lt;div class=&quot;pane&quot;&gt;
+              &lt;div class=&quot;pane__content&quot;&gt;
+                &lt;div class=&quot;view view--discussion-listing&quot;&gt;
+                  {{# listItems.nine }}
+                    &lt;div class=&quot;views-row&quot;&gt;
+                      {{&gt; organisms-discussion-teaser }}
+                    &lt;/div&gt;
+                  {{/ listItems.nine }}
+                  {{&gt; molecules-pager }}
+                &lt;/div&gt;
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
