--- a/public/sites/all/themes/gesso/sass/partials/components/_pager.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_pager.scss
@@ -13,6 +13,7 @@
 }
 
 .pager__item {
+  background-color: #fff;
   display: inline-block;
   color: $primary-text-color;
   font-size: $font-size-normal;
