--- a/public/sites/all/themes/gesso/sass/partials/components/_region-landing-title.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_region-landing-title.scss
@@ -1,7 +1,7 @@
 .region-landing-title {
   background: $lightorange;
   color: #fff;
-  margin: 0 0 3em 0;
+  margin: 0;
   min-height: 288px;
   @include breakpoint(900px, $no-query: true) {
     min-height: 300px;
