--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--page-title.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--page-title.scss
@@ -2,13 +2,6 @@
   background: url(../images/geometricshape--title.png) no-repeat 50% 100%;
   margin: 0;
   padding: 0;
-  min-height: 50px;
-  @include breakpoint(700px 1199px) {
-    min-height: 80px;
-  }
-  @include breakpoint(1200px, $no-query: true) {
-    min-height: 105px;
-  }
   position: relative;
   &:after {
     content: "";
@@ -29,15 +22,12 @@
   h1 {
     color: #fff;
     font-size: em(24px);
-    @include breakpoint(700px 1199px) {
-      font-size: em(38px);
-    }
-    @include breakpoint(1200px, $no-query: true) {
-      font-size: em(48px); 
+    @include breakpoint(700px, $no-query: true) {
+      font-size: em(40px);
     }
     font-weight: 300;
-    line-height: 1.2;
+    line-height: 1.3;
     margin: 0;
-    padding: 0.4em 0;
+    padding: 0.6em 0 0.75em 0; 
   }
 }
